# facefit

./: .gitignore  CMakeLists.txt  README.md  dependencies.sh  save_graph.py
data/: facemesh-ultralite_nocrawl-2018_12_21-v0.tflite
prnet/: predictor.py
src/: facefit.cpp  facefit.h  nuke2tf.cpp  nuke2tf.h  prnet.cpp  prnet.h  tflite_mesh.cpp  tflite_mesh.h
